@@ -6,6 +6,9 @@ import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.AnalysisDetails;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.DecorationResult;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.PostAnalysisIssueVisitor;
 import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.markup.MarkdownFormatterFactory;
+import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.report.AnalysisIssueSummary;
+import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.report.AnalysisSummary;
+import com.github.mc1arke.sonarqube.plugin.ce.pullrequest.report.ReportGenerator;
 import com.github.tomakehurst.wiremock.junit.WireMockRule;
 import org.junit.Before;
 import org.junit.Rule;
@@ -14,7 +17,6 @@ import org.sonar.api.ce.posttask.QualityGate;
 import org.sonar.api.config.internal.Encryption;
 import org.sonar.api.config.internal.Settings;
 import org.sonar.api.issue.Issue;
-import org.sonar.api.platform.Server;
 import org.sonar.api.rule.RuleKey;
 import org.sonar.api.rules.RuleType;
 import org.sonar.ce.task.projectanalysis.component.Component;
@@ -27,6 +29,7 @@ import org.sonar.db.alm.setting.ProjectAlmSettingDto;
 import org.sonar.db.protobuf.DbIssues;
 
 import java.util.Collections;
+import java.util.List;
 import java.util.Optional;
 
 import static com.github.tomakehurst.wiremock.client.WireMock.aResponse;
@@ -60,8 +63,6 @@ public class AzureDevOpsPullRequestDecoratorTest {
     private final String issueKeyVal = "issueKeyVal";
     private final String ruleKeyVal = "ruleKeyVal";
     private final String threadId = "1468";
-    private final String issueUrl = "http://sonar:9000/sonar/project/issues?id=sonarProject&pullRequest=8513&issues=issueKeyVal&open=issueKeyVal";
-    private final String ruleUrl = "http://sonar:9000/sonar/coding_rules?open=ruleKeyVal&rule_key=ruleKeyVal";
     private final int lineNumber = 5;
     private final String token = "token";
     private final String authHeader = "Basic OnRva2Vu";
@@ -70,15 +71,14 @@ public class AzureDevOpsPullRequestDecoratorTest {
 
     private final ProjectAlmSettingDto projectAlmSettingDto = mock(ProjectAlmSettingDto.class);
     private final AlmSettingDto almSettingDto = mock(AlmSettingDto.class);
-    private final Server server = mock(Server.class);
     private final ScmInfoRepository scmInfoRepository = mock(ScmInfoRepository.class);
     private final Settings settings = mock(Settings.class);
     private final Encryption encryption = mock(Encryption.class);
-    private final MarkdownFormatterFactory markdownFormatterFactory = mock(MarkdownFormatterFactory.class);
-    private final AzureDevOpsPullRequestDecorator pullRequestDecorator = new AzureDevOpsPullRequestDecorator(server, scmInfoRepository, new DefaultAzureDevopsClientFactory(settings), markdownFormatterFactory);
+    private final ReportGenerator reportGenerator = mock(ReportGenerator.class);
+    private final MarkdownFormatterFactory formatterFactory = mock(MarkdownFormatterFactory.class);
+    private final AzureDevOpsPullRequestDecorator pullRequestDecorator = new AzureDevOpsPullRequestDecorator(scmInfoRepository, new DefaultAzureDevopsClientFactory(settings), reportGenerator, formatterFactory);
     private final AnalysisDetails analysisDetails = mock(AnalysisDetails.class);
 
-    private final PostAnalysisIssueVisitor issueVisitor = mock(PostAnalysisIssueVisitor.class);
     private final PostAnalysisIssueVisitor.ComponentIssue componentIssue = mock(PostAnalysisIssueVisitor.ComponentIssue.class);
     private final PostAnalysisIssueVisitor.LightIssue defaultIssue = mock(PostAnalysisIssueVisitor.LightIssue.class);
     private final Component component = mock(Component.class);
@@ -86,6 +86,8 @@ public class AzureDevOpsPullRequestDecoratorTest {
     @Before
     public void setUp() {
         when(settings.getEncryption()).thenReturn(encryption);
+        when(reportGenerator.createAnalysisIssueSummary(any(), any())).thenReturn(mock(AnalysisIssueSummary.class));
+        when(reportGenerator.createAnalysisSummary(any())).thenReturn(mock(AnalysisSummary.class));
     }
 
     private void configureTestDefaults() {
@@ -95,22 +97,23 @@ public class AzureDevOpsPullRequestDecoratorTest {
         when(analysisDetails.getAnalysisProjectName()).thenReturn(projectName);
         when(analysisDetails.getAnalysisProjectKey()).thenReturn(sonarProject);
         when(analysisDetails.getQualityGateStatus()).thenReturn(QualityGate.Status.OK);
-        when(analysisDetails.getBranchName()).thenReturn(pullRequestId);
-        when(analysisDetails.getPostAnalysisIssueVisitor()).thenReturn(issueVisitor);
-        when(analysisDetails.getRuleUrlWithRuleKey(ruleKeyVal)).thenReturn(ruleUrl);
-        when(analysisDetails.getIssueUrl(defaultIssue)).thenReturn(issueUrl);
-        when(analysisDetails.getSCMPathForIssue(componentIssue)).thenReturn(Optional.of(filePath));
-        when(analysisDetails.parseIssueIdFromUrl(any())).thenReturn(Optional.of(new AnalysisDetails.ProjectIssueIdentifier("projectKey", "issueid")));
-        when(issueVisitor.getIssues()).thenReturn(Collections.singletonList(componentIssue));
+        when(analysisDetails.getPullRequestId()).thenReturn(pullRequestId);
+        when(analysisDetails.getIssues()).thenReturn(List.of(componentIssue));
 
-        when(analysisDetails.createAnalysisSummary(any())).thenReturn("analysis summary");
-        when(analysisDetails.createAnalysisIssueSummary(any(), any())).thenReturn("issue summary");
+        AnalysisSummary analysisSummary = mock(AnalysisSummary.class);
+        when(analysisSummary.format(any())).thenReturn("analysis summary");
+        when(analysisSummary.getDashboardUrl()).thenReturn("http://sonar:9000/sonar/dashboard?id=" + sonarProject + "&pullRequest=" + pullRequestId);
+        AnalysisIssueSummary analysisIssueSummary = mock(AnalysisIssueSummary.class);
+
+        when(reportGenerator.createAnalysisSummary(any())).thenReturn(analysisSummary);
+        when(reportGenerator.createAnalysisIssueSummary(any(), any())).thenReturn(analysisIssueSummary);
 
         DbIssues.Locations locate = DbIssues.Locations.newBuilder().build();
         RuleType rule = RuleType.CODE_SMELL;
         RuleKey ruleKey = mock(RuleKey.class);
         when(componentIssue.getIssue()).thenReturn(defaultIssue);
         when(componentIssue.getComponent()).thenReturn(component);
+        when(componentIssue.getScmPath()).thenReturn(Optional.of("scmPath"));
         when(defaultIssue.getStatus()).thenReturn(Issue.STATUS_OPEN);
         when(defaultIssue.getLine()).thenReturn(lineNumber);
         when(defaultIssue.getLocations()).thenReturn(locate);
@@ -118,7 +121,6 @@ public class AzureDevOpsPullRequestDecoratorTest {
         when(defaultIssue.getMessage()).thenReturn(issueMessage);
         when(defaultIssue.getRuleKey()).thenReturn(ruleKey);
         when(defaultIssue.key()).thenReturn(issueKeyVal);
-        when(analysisDetails.getSCMPathForIssue(componentIssue)).thenReturn(Optional.of("scmPath"));
         Changeset changeset = mock(Changeset.class);
         when(changeset.getRevision()).thenReturn("revisionId");
         ScmInfo scmInfo = mock(ScmInfo.class);
@@ -126,7 +128,6 @@ public class AzureDevOpsPullRequestDecoratorTest {
         when(scmInfo.getChangesetForLine(anyInt())).thenReturn(changeset);
         when(scmInfoRepository.getScmInfo(component)).thenReturn(Optional.of(scmInfo));
         when(ruleKey.toString()).thenReturn(ruleKeyVal);
-        when(server.getPublicRootUrl()).thenReturn(sonarRootUrl);
 
         when(projectAlmSettingDto.getAlmSlug()).thenReturn(azureProject);
         when(projectAlmSettingDto.getAlmRepo()).thenReturn(azureRepository);
@@ -512,14 +513,14 @@ public class AzureDevOpsPullRequestDecoratorTest {
 
     @Test
     public void testName() {
-        assertThat(new AzureDevOpsPullRequestDecorator(mock(Server.class), mock(ScmInfoRepository.class), mock(AzureDevopsClientFactory.class), mock(MarkdownFormatterFactory.class)).alm()).isEqualTo(Collections.singletonList(ALM.AZURE_DEVOPS));
+        assertThat(new AzureDevOpsPullRequestDecorator(mock(ScmInfoRepository.class), mock(AzureDevopsClientFactory.class), mock(ReportGenerator.class), mock(MarkdownFormatterFactory.class)).alm()).isEqualTo(Collections.singletonList(ALM.AZURE_DEVOPS));
     }
 
     @Test
     public void testDecorateQualityGateRepoNameException() {
         when(almSettingDto.getUrl()).thenReturn("almUrl");
         when(almSettingDto.getDecryptedPersonalAccessToken(any())).thenReturn("personalAccessToken");
-        when(analysisDetails.getBranchName()).thenReturn("123");
+        when(analysisDetails.getPullRequestId()).thenReturn("123");
         when(projectAlmSettingDto.getAlmSlug()).thenReturn("prj");
 
         assertThatThrownBy(() -> pullRequestDecorator.decorateQualityGateStatus(analysisDetails, almSettingDto, projectAlmSettingDto))
@@ -531,7 +532,7 @@ public class AzureDevOpsPullRequestDecoratorTest {
     public void testDecorateQualityGateRepoSlugException() {
         when(almSettingDto.getUrl()).thenReturn("almUrl");
         when(almSettingDto.getDecryptedPersonalAccessToken(any())).thenReturn("personalAccessToken");
-        when(analysisDetails.getBranchName()).thenReturn("123");
+        when(analysisDetails.getPullRequestId()).thenReturn("123");
         when(projectAlmSettingDto.getAlmRepo()).thenReturn("repo");
 
         assertThatThrownBy(() -> pullRequestDecorator.decorateQualityGateStatus(analysisDetails, almSettingDto, projectAlmSettingDto))
@@ -555,7 +556,7 @@ public class AzureDevOpsPullRequestDecoratorTest {
     public void testDecorateQualityGatePRBranchException() {
         when(almSettingDto.getUrl()).thenReturn("almUrl");
         when(almSettingDto.getDecryptedPersonalAccessToken(any())).thenReturn("personalAccessToken");
-        when(analysisDetails.getBranchName()).thenReturn("NON-NUMERIC");
+        when(analysisDetails.getPullRequestId()).thenReturn("NON-NUMERIC");
         when(projectAlmSettingDto.getAlmSlug()).thenReturn("prj");
         when(projectAlmSettingDto.getAlmRepo()).thenReturn("repo");
 
